--- a/index.html
+++ b/index.html
@@ -1,71 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>WingsMedia</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wings Media - Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body class="fade-in">
+<body>
 
-  <!-- Header -->
-  <header>
-    <a href="index.html" class="logo">WingsMedia</a>
-    <nav class="nav">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="podcasts.html">Podcasts</a>
-      <a href="articles.html">Articles</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
+    <header>
+        <a href="index.html">
+            <img src="logo.png" alt="Wings Media Logo">
+        </a>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="articles.html">Articles</a>
+            <a href="podcasts.html">Podcasts</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
 
-  <!-- Hero Section -->
-  <section class="hero reveal">
-    <h1>Voices that Matter</h1>
-    <p>WingsMedia is a youth-driven platform for bold, unfiltered, and powerful voices through podcasts, stories, and real-life perspectives.</p>
-  </section>
+    <main>
+        <section class="hero">
+            <h1>Welcome to Wings Media</h1>
+            <p>Where voices fly free. Explore bold ideas, inspiring stories, and impactful conversations.</p>
+            <a href="podcasts.html"><button>🎙️ Listen to Our Podcasts</button></a>
+        </section>
 
-  <!-- Main Content -->
-  <section class="page-content">
-    <div class="card reveal">
-      <h2>🎙️ Explore Our Podcasts</h2>
-      <p>From political thoughts to personal experiences, dive into a world of fresh narratives.</p>
-      <a href="podcasts.html" class="btn">Listen Now</a>
-    </div>
+        <section class="features">
+            <div class="feature">
+                <h2>🎧 Original Shows</h2>
+                <p>Discover powerful podcasts on politics, people, and culture — unfiltered and inspiring.</p>
+            </div>
+            <div class="feature">
+                <h2>✍️ Thought Leadership</h2>
+                <p>Explore articles by creators like Purushothaman, Akhilesh, Dinesh, Navaneet and more.</p>
+            </div>
+            <div class="feature">
+                <h2>🌍 For the People</h2>
+                <p>Rooted in freedom, democracy, and change. Content that moves minds and matters.</p>
+            </div>
+        </section>
+    </main>
 
-    <div class="card reveal">
-      <h2>📰 Read Our Articles</h2>
-      <p>Latest perspectives published on LinkedIn, Medium, and Substack.</p>
-      <a href="articles.html" class="btn">Read More</a>
-    </div>
-
-    <div class="card reveal">
-      <h2>💬 Join The Movement</h2>
-      <p>Contact us or contribute your thoughts, experiences, or feedback.</p>
-      <a href="contact.html" class="btn">Reach Out</a>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 WingsMedia | All rights reserved</p>
-  </footer>
-
-  <!-- JS for Scroll Reveal -->
-  <script>
-    const reveals = document.querySelectorAll('.reveal');
-    window.addEventListener('scroll', () => {
-      reveals.forEach(el => {
-        const windowHeight = window.innerHeight;
-        const revealTop = el.getBoundingClientRect().top;
-        const revealPoint = 100;
-        if (revealTop < windowHeight - revealPoint) {
-          el.classList.add('visible');
-        }
-      });
-    });
-  </script>
+    <footer>
+        <p>&copy; 2025 Wings Media. All rights reserved. Powered by truth & freedom.</p>
+    </footer>
 
 </body>
 </html>
