--- a/articles.html
+++ b/articles.html
@@ -95,6 +95,26 @@
   <footer>
     <p>© 2025 WingsMedia. All rights reserved.</p>
   </footer>
+<main>
+    <section class="hero">
+        <h1>Our Articles</h1>
+        <p>Read deep, thoughtful, and raw perspectives by our creators on Medium, LinkedIn, and Substack.</p>
+    </section>
 
+    <section class="features">
+        <div class="feature">
+            <h2>📝 Medium</h2>
+            <p><a href="https://medium.com/@yourusername" target="_blank">Follow us on Medium</a> for in-depth takes.</p>
+        </div>
+        <div class="feature">
+            <h2>🔗 LinkedIn</h2>
+            <p><a href="https://linkedin.com/in/akhilesh-v-s-564546236" target="_blank">Connect with us on LinkedIn</a>.</p>
+        </div>
+        <div class="feature">
+            <h2>✉️ Substack</h2>
+            <p><a href="https://yoursubstack.substack.com" target="_blank">Subscribe for regular updates</a>.</p>
+        </div>
+    </section>
+</main>
 </body>
 </html>
