--- a/podcasts.html
+++ b/podcasts.html
@@ -101,6 +101,26 @@
   <footer>
     <p>© 2025 WingsMedia. All rights reserved.</p>
   </footer>
+<main>
+    <section class="hero">
+        <h1>🎧 Our Podcasts</h1>
+        <p>Explore mind-opening shows hosted by our passionate creators. Available on Spotify, YouTube & more.</p>
+    </section>
 
+    <section class="features">
+        <div class="feature">
+            <h2>🗣️ The Freedom Voice</h2>
+            <p>Hosted by Purushothaman — tackling freedom, politics, and what's right for the nation.</p>
+        </div>
+        <div class="feature">
+            <h2>🧠 Youth Unfiltered</h2>
+            <p>Dinesh’s powerful take on youth, reality, and building a better tomorrow.</p>
+        </div>
+        <div class="feature">
+            <h2>🌍 Ground Truth</h2>
+            <p>Raw conversations with locals and experts that hit hard and feel real.</p>
+        </div>
+    </section>
+</main>
 </body>
 </html>
