--- a/contact.html
+++ b/contact.html
@@ -82,6 +82,26 @@
   <footer>
     <p>© 2025 WingsMedia. All rights reserved.</p>
   </footer>
+<main>
+    <section class="hero">
+        <h1>Contact Wings Media</h1>
+        <p>Have questions, ideas, or feedback? We'd love to hear from you.</p>
+    </section>
 
+    <section class="features">
+        <div class="feature">
+            <h2>Email Us</h2>
+            <p><a href="mailto:akhileshramamoorthy39@gmail.com">akhileshramamoorthy39@gmail.com</a></p>
+        </div>
+        <div class="feature">
+            <h2>Phone</h2>
+            <p><a href="tel:+918838227862">+91 88382 27862</a></p>
+        </div>
+        <div class="feature">
+            <h2>LinkedIn</h2>
+            <p><a href="https://linkedin.com/in/akhilesh-v-s-564546236" target="_blank">Message us here</a></p>
+        </div>
+    </section>
+</main>
 </body>
 </html>
