--- a/index.html
+++ b/index.html
@@ -1,52 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wings Media - Home</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>WingsMedia | Home</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-    <header>
-        <a href="index.html">
-            <img src="logo.png" alt="Wings Media Logo">
-        </a>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="articles.html">Articles</a>
-            <a href="podcasts.html">Podcasts</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </header>
+  <header class="navbar">
+    <div class="logo"><a href="index.html">WINGS<span>MEDIA</span></a></div>
+    <nav>
+      <ul>
+        <li><a href="about.html">About</a></li>
+        <li><a href="podcasts.html">Podcasts</a></li>
+        <li><a href="articles.html">Articles</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <main>
-        <section class="hero">
-            <h1>Welcome to Wings Media</h1>
-            <p>Where voices fly free. Explore bold ideas, inspiring stories, and impactful conversations.</p>
-            <a href="podcasts.html"><button>🎙️ Listen to Our Podcasts</button></a>
-        </section>
+  <main class="content fade-in">
+    <section class="hero">
+      <h1>Welcome to <span>WingsMedia</span></h1>
+      <p>Your voice. Your story. Unfiltered. Bold. Free.</p>
+      <a href="podcasts.html" class="cta-button">🎧 Listen to Our Podcasts</a>
+    </section>
+  </main>
 
-        <section class="features">
-            <div class="feature">
-                <h2>🎧 Original Shows</h2>
-                <p>Discover powerful podcasts on politics, people, and culture — unfiltered and inspiring.</p>
-            </div>
-            <div class="feature">
-                <h2>✍️ Thought Leadership</h2>
-                <p>Explore articles by creators like Purushothaman, Akhilesh, Dinesh, Navaneet and more.</p>
-            </div>
-            <div class="feature">
-                <h2>🌍 For the People</h2>
-                <p>Rooted in freedom, democracy, and change. Content that moves minds and matters.</p>
-            </div>
-        </section>
-    </main>
+  <footer class="footer">
+    <p>© 2025 WingsMedia. All rights reserved.</p>
+  </footer>
 
-    <footer>
-        <p>&copy; 2025 Wings Media. All rights reserved. Powered by truth & freedom.</p>
-    </footer>
+  <script src="script.js"></script>
+</body>
+</html>
 
 </body>
 </html>
